--- a/tentang-kami.html
+++ b/tentang-kami.html
@@ -32,34 +32,6 @@
         .team-avatar:hover img {
             transform: scale(1.08);
         }
-        
-        /* Rizki Hidayat hover effect */
-        .rizki-avatar {
-            position: relative;
-        }
-        .rizki-avatar img {
-            position: absolute;
-            top: 0;
-            left: 0;
-            transition: opacity 0.5s ease, transform 0.25s ease;
-        }
-        .rizki-img-1 {
-            opacity: 1;
-            z-index: 1;
-        }
-        .rizki-img-2 {
-            opacity: 0;
-            z-index: 2;
-        }
-        .rizki-avatar:hover .rizki-img-1 {
-            opacity: 0;
-        }
-        .rizki-avatar:hover .rizki-img-2 {
-            opacity: 1;
-        }
-        .rizki-avatar:hover .rizki-img-2 {
-            transform: scale(1.08);
-        }
     </style>
 </head>
 <body>
@@ -273,8 +245,8 @@
                         <p style="color: #666; font-size: 0.95rem;">Graphic Designer</p>
                     </div>
                     <div style="text-align: center;">
-                        <div class="team-avatar rizki-avatar">
-                            <img src="Team/rizki.JPG" alt="Rizki" class="rizki-img-1">
+                        <div class="team-avatar">
+                            <img src="Team/rizki.JPG" alt="Rizki">
                         </div>
                         <p style="font-weight: 700; color: #2f4157; margin-bottom: 4px;">Rizki Hidayat</p>
                         <p style="color: #666; font-size: 0.95rem;">Editor</p>
