--- a/photobooth.html
+++ b/photobooth.html
@@ -202,8 +202,10 @@
             border: none !important;
         }
     </style>
+    <script src="https://pl28442117.effectivegatecpm.com/aa/a6/41/aaa641d44a04600a540f4b4a1a64250a.js"></script>
 </head>
 <body>
+    <script src="https://pl28442117.effectivegatecpm.com/aa/a6/41/aaa641d44a04600a540f4b4a1a64250a.js"></script>
     <!-- Navigation -->
     <nav class="navbar">
         <div class="container">
@@ -734,6 +736,7 @@
             </div>
         </div>
     </footer>
+    <script src="https://pl28442117.effectivegatecpm.com/aa/a6/41/aaa641d44a04600a540f4b4a1a64250a.js"></script>
 
     <!-- Floating WhatsApp Button -->
     <a href="https://wa.me/628567874388?text=Halo%20admin%2C%20saya%20tertarik%20dengan%20layanan%20Jogja%20Creative%20Production%20dan%20ingin%20mengetahui%20lebih%20lanjut.%20Boleh%20dibantu%3F" class="whatsapp-float" target="_blank" rel="noopener noreferrer" title="Hubungi Kami via WhatsApp">
@@ -796,6 +799,7 @@
         });
         });
     </script>
+    <script src="https://pl28442117.effectivegatecpm.com/aa/a6/41/aaa641d44a04600a540f4b4a1a64250a.js"></script>
 </body>
 </html>
 
