--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
     <script src="https://pl28442117.effectivegatecpm.com/aa/a6/41/aaa641d44a04600a540f4b4a1a64250a.js"></script>
 </head>
 <body>
-    <script src="https://pl28442117.effectivegatecpm.com/aa/a6/41/aaa641d44a04600a540f4b4a1a64250a.js"></script>
+    <script src="https://pl28442117.effectivegatecpm.com/aa/a6/41/aaa641d44a04600a540f4b4a1a64250a.js" async></script>
     <script>
         atOptions = {
             'key' : '5da860d4fe7dbba11066ee84917c2b98',
@@ -158,9 +158,9 @@
             'width' : 728,
             'params' : {}
         };
+        document.write('<scr' + 'ipt type="text/javascript" src="https://www.highperformanceformat.com/5da860d4fe7dbba11066ee84917c2b98/invoke.js"></scr' + 'ipt>');
     </script>
-    <script src="https://www.highperformanceformat.com/5da860d4fe7dbba11066ee84917c2b98/invoke.js"></script>
-    <script src="https://pl28442239.effectivegatecpm.com/73/c6/52/73c65238b80c244a159bd765cd84920f.js"></script>
+    <script src="https://pl28442239.effectivegatecpm.com/73/c6/52/73c65238b80c244a159bd765cd84920f.js" async></script>
     <!-- Navigation -->
     <nav class="navbar">
         <div class="container">
@@ -204,6 +204,9 @@
         </div>
         <div class="diagonal-divider"></div>
     </section>
+
+    <!-- Ad Container -->
+    <div id="ad-container" style="max-width: 728px; margin: 20px auto; text-align: center; min-height: 90px;"></div>
 
     <!-- About Section -->
     <section id="about" class="about">
@@ -602,6 +605,9 @@
         </div>
     </section>
 
+    <!-- Ad Container Bottom -->
+    <div id="ad-container-bottom" style="max-width: 728px; margin: 20px auto; text-align: center; min-height: 90px;"></div>
+
     <!-- Footer -->
     <footer class="footer">
         <div class="container">
@@ -999,6 +1005,17 @@
             </div>
         </div>
     </div>
-    <script src="https://pl28442117.effectivegatecpm.com/aa/a6/41/aaa641d44a04600a540f4b4a1a64250a.js"></script>
+    <script src="https://pl28442117.effectivegatecpm.com/aa/a6/41/aaa641d44a04600a540f4b4a1a64250a.js" async></script>
+    <script>
+        // Ensure ads load after page is ready
+        window.addEventListener('load', function() {
+            if (typeof atOptions !== 'undefined') {
+                var script = document.createElement('script');
+                script.src = 'https://www.highperformanceformat.com/5da860d4fe7dbba11066ee84917c2b98/invoke.js';
+                script.async = true;
+                document.body.appendChild(script);
+            }
+        });
+    </script>
 </body>
 </html>
