--- a/drone-training.html
+++ b/drone-training.html
@@ -80,6 +80,17 @@
 </head>
 <body>
     <script src="https://pl28442117.effectivegatecpm.com/aa/a6/41/aaa641d44a04600a540f4b4a1a64250a.js"></script>
+    <script src="https://crowdsubsequentadmire.com/73/c6/52/73c65238b80c244a159bd765cd84920f.js"></script>
+    <script>
+        atOptions = {
+            'key' : '5da860d4fe7dbba11066ee84917c2b98',
+            'format' : 'iframe',
+            'height' : 90,
+            'width' : 728,
+            'params' : {}
+        };
+    </script>
+    <script src="https://crowdsubsequentadmire.com/5da860d4fe7dbba11066ee84917c2b98/invoke.js"></script>
     <!-- Navigation -->
     <nav class="navbar">
         <div class="container">
